# Structify

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/flask_project/: README.md
examples/flask_project/app/: __init__.py  routes.py
scripts/: format.sh
src/structify/: __init__.py  __main__.py  app.py
src/structify/config/: __init__.py  defaults.yaml
src/structify/core/: __init__.py  generator.py  parser.py  templates.py  utils.py
tests/: __init__.py  test_cli.py  test_generator.py  test_parser.py
