[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "structify"
version = "0.1.0"
description = "Beginner-friendly project scaffolding from natural language"
authors = [{ name = "Shashank U" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "flask>=3.1.2",
    "streamlit>=1.28.0",
    "requests>=2.28.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["structify"]